# gaims

./: .gitignore  README.md  activations_data.pt  example.md  game_analysis.md  game_environment.py  games_with_probes.py  huggingface_langchain.py  log_parser.py  main.py  models.py  parsed_log.md  prisoners.py  pyproject.toml  setup.sh  todo.md
configs/: game_simple_configs.py
dashboard/gaims-dashboard/: package-lock.json  package.json
dashboard/gaims-dashboard/src/: App.tsx
gaims/: README.md  gym_env.py  main.py
gaims/agents/: agent.py  models.py
gaims/agents/matrix_agents/: matrix_agent.py
gaims/communication/: communication.py
gaims/configs/: agent_config.py  game_config.py  game_simple_configs.py  prompt_config.py
gaims/games/: action.py  game.py  game_config.py
gaims/games/MatrixGames/: matrix_game.py
gaims/games/matrix_games/: matrix_game.py
gaims/games/negotiation/: negotiation_game.py
gaims/games/resource_sharing/: resource_sharing_game.py
gaims/utils/: activation_hook.py  huggingface_langchain.py  parse_special_tokens.py
notebooks/: HOT_information_sharing.ipynb  HOT_prisoners_dilemma.ipynb  company.py  players.py  prisoners.py
scripts/: main.py
tests/agents/: agent_test.py  models_test.py
tests/communication/: communication_test.py
tests/games/: gym_env_test.py
