[project]
name = "ai-hybrid-organizations"
version = "0.1.0"
description = "Experiments for research into AI hybrid organizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.10.0",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]

[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true
