[project]
name = "ai-hybrid-organizations"
version = "0.1.0"
description = "Experiments for research into AI hybrid organizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "google-genai>=1.10.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-huggingface>=0.2.0",
    "mypy>=1.15.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.5",
    "torch>=2.4.1",
]

[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true
