[project]
name = "ai-hybrid-organizations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "gymnasium>=1.2.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.55.0",
]
